--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div>
         <h1>SOLID CONSULT SPA</h1>
-        <p>Es un ready partneRr chileno con mas de 13 añios de experiencia y posee actualmente varias importantes empresas en Chile.</p>
-        <p>Ambiocxcionamos expandirnosss en el mercado chileno y en un futuro proximo tambien latinoamericano.</p>   
+        <p>Es un ready partneRr chileno con grandes proyectos y mas de 13 añios de experiencia y posee actualmente varias importantes empresas en Chile.</p>
+        <p>Ambiocxcionamos expandirnosss en el mercado chileno y en un futuro proximo tambien latinoamericano. Eso es ya para el 2023</p>   
     </div>
 </body>
 </html>
